# osm2citycad

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/osm2citycad/: __init__.py  cli.py  converter.py  url_parser.py
