[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osm2citycad"
version = "0.1.0"
description = "Fetch OpenStreetMap data and convert to layered DXF files for CityCAD."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Simon Dorfman", email = "simon@yamlike.com" },
]
keywords = ["openstreetmap", "osm", "citycad", "dxf", "cad", "urban-planning", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "osmnx>=2.0.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "ezdxf>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
osm2citycad = "osm2citycad.cli:cli_entry"

[project.urls]
Homepage = "https://github.com/simondorfman/osm2citycad"
Issues = "https://github.com/simondorfman/osm2citycad/issues"

[tool.setuptools.packages.find]
where = ["src"]
